Fixed overflow for dialog and dialog input-data enabled overflow the content instead of the dialog element itself

--- a/laravel/public/assets/css/elements/dialogs.css
+++ b/laravel/public/assets/css/elements/dialogs.css
@@ -13,7 +13,7 @@ dialog
 	max-width: 45%;
 	min-width: 30%;
 	opacity: 0;
-	overflow-x: hidden;
+	overflow: hidden;
 	padding: 20px;
 	position: absolute;
 	top: 30%;
@@ -27,12 +27,11 @@ dialog
 
 		form
 		{
+			overflow: hidden;
 			width: 100%;
 
 			.top
 			{
-				position: sticky;
-				top: 0;
 				width: 100%;
 				z-index: 2;
 
@@ -55,7 +54,10 @@ dialog
 
 			.content
 			{
-				padding: 35px;
+				justify-content: flex-start;
+				overflow-x: hidden;
+				overflow-y: auto;
+				padding: 35px 35px;
 				width: 100%;
 
 				.input-wrapper
